src/test/deca/syntax/invalid/mauvais_main_vide_2.deca
// Description:
//    main vide suivi d'un point-virgule
//
// Resultats:
// ligne 8:  "no viable alternative at input '}'"


{ return}
